--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
     "expo": "~50.0.0-preview.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.1"
+    "react-native": "0.73.1",
+    "expo-router": "~3.4.1",
+    "react-native-safe-area-context": "4.7.4",
+    "react-native-screens": "~3.27.0",
+    "expo-linking": "~6.2.1",
+    "expo-constants": "~15.4.2",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
+  },
+  "overrides": {
+    "react-refresh": "~0.14.0"
   },
   "private": true
 }
